--- a/html/state.html
+++ b/html/state.html
@@ -181,6 +181,7 @@
     <span class="p">}</span>
     <span class="k">else</span>
     <span class="p">{</span>
+      <span class="n">isJumping_</span> <span class="o">=</span> <span class="nb">false</span><span class="p">;</span>
       <span class="n">setGraphics</span><span class="p">(</span><span class="n">IMAGE_DIVE</span><span class="p">);</span>
     <span class="p">}</span>
   <span class="p">}</span>
