--- a/html/component.html
+++ b/html/component.html
@@ -1010,7 +1010,7 @@ communication paths if you need them.</p>
     components of the same type and put them in an array, now you&#x2019;ve
     got them laid out in memory in the most efficient way for your
     CPU to read them.</p>
-<p>This is a rare hat trick in architecture: your code is both more
+<p>This is a rare win-win in architecture: your code is both more
 maintainable <em>and</em> faster.</p>
 </li>
 <li>
