--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -62,18 +62,18 @@
   </table>
 </div>
 <h2><a href="#intent" name="intent">Intent</a></h2>
-<p><em>Speed up memory access by arranging data in memory to take advantage of CPU caching.</em></p>
+<p><em>Speed memory access by arranging data to take advantage of CPU caching.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
-<p>We&#x2019;ve been lied to. They keep showing us charts where CPU speed keeps goes up and up every year as if Moore&#x2019;s Law isn&#x2019;t just a historical observation but some kind of divine right. Without lifting a finger, we software folks watch our programs magically speed up just by virtue of new hardware.</p>
+<p>We&#x2019;ve been lied to. They keep showing us charts where CPU speed goes up and up every year as if Moore&#x2019;s Law isn&#x2019;t just a historical observation but some kind of divine right. Without lifting a finger, we software folks watch our programs magically accelerate just by virtue of new hardware.</p>
 <p>Chips <em>have</em> been getting faster (though even that&#x2019;s plateauing now), but the hardware heads failed to mention something. Sure, we can <em>process</em> data faster than ever, but we can&#x2019;t <em>get</em> that data faster.</p>
 <p><strong>TODO: graph of processor and memory speeds</strong></p>
 <p>For your super-fast CPU to blow through a ream of calculations, it actually has to get the data out of main memory and into registers. It turns out that RAM hasn&#x2019;t been keeping up with increasing CPU speeds. Not even close.</p>
 <p>With today&#x2019;s hardware, it can take <em>hundreds</em> of cycles to fetch a byte of data from <span name="ram">RAM</span>. If most instructions need data, and it takes hundreds of cycles to get it, how is that our CPUs aren&#x2019;t sitting idle 99% of the time waiting for data?</p>
-<p>Actually, they <em>are</em> stuck waiting on memory an astonishingly large fraction of time these days, but it&#x2019;s not as bad as it could be. To explain why, let&#x2019;s take a trip to the Land of Overly Long Analogies&hellip;</p>
+<p>Actually, they <em>are</em> stuck waiting on memory an astonishingly large fraction of time these days, but it&#x2019;s not as bad as it could be. To explain how, let&#x2019;s take a trip to the Land of Overly Long Analogies&hellip;</p>
 <aside name="ram">
 
 <p>It&#x2019;s called "Random access memory" because, unlike disc drives, you can theoretically access any piece of it as quick as any other. You don&#x2019;t have to worry about reading things consecutively like you do a disc.</p>
-<p>Or, at least, you <em>didn&#x2019;t</em>. As we&#x2019;ll see, RAM isn&#x2019;t so random access anymore either.</p>
+<p>Or, at least, you <em>didn&#x2019;t</em>. As we&#x2019;ll see, RAM isn&#x2019;t so random access anymore.</p>
 </aside>
 
 <h3><a href="#a-data-warehouse" name="a-data-warehouse">A data warehouse</a></h3>
@@ -100,19 +100,19 @@
 </ul>
 <aside name="next">
 
-<p>The technical term for often using something near the thing you just used is <em>locality of reference</em>.</p>
+<p>The technical term for using something near the thing you just used is <em>locality of reference</em>.</p>
 </aside>
 
 <p>They come up with a clever fix. Whenever you request a box from the warehouse guy, he&#x2019;ll
 grab an entire pallet of them. He gets the box you want and then
-some more boxes that are next to it. He doesn&#x2019;t know if you want those (and, given his work ethic, clearly doesn&#x2019;t care), he just takes them.</p>
+some more boxes that are next to it. He doesn&#x2019;t know if you want those (and, given his work ethic, clearly doesn&#x2019;t care); he just takes as many as he can fit on the pallet.</p>
 <p>He loads the whole pallet and brings it to you. Disregarding concerns for workplace safety, he drives the forklift right in and drops the pallet in the corner of your office.</p>
 <p>When you need a new box, now, the first thing you do is see if it&#x2019;s already on the pallet in your office. If it is, great! It just takes you a second to grab it and you&#x2019;re back to crunching numbers. If a pallet holds fifty boxes and you got lucky and <em>all</em> of the boxes you need happen to be on it, you can churn through fifty times more work than you could before.</p>
 <p>But, if you need a box that&#x2019;s <em>not</em> on the pallet, you&#x2019;re back to square one. Since you can only fit one pallet in your office, your warehouse friend will have to take that one back and then bring you entirely new one.</p>
 <h3><a href="#a-pallet-for-your-cpu" name="a-pallet-for-your-cpu">A pallet for your CPU</a></h3>
 <p>Strangely enough, this is similiar to how CPUs in modern computers work. In case it isn&#x2019;t obvious, you play the role of the CPU. Your desk is the CPU&#x2019;s registers, and the box of papers is the data you can fit in them. The warehouse is your machine&#x2019;s RAM, and that annoying warehouse guy is the bus that pulls data from main memory into registers.</p>
 <p>If I were writing this chapter thirty years ago, the analogy would stop there. But as chips got faster and RAM, well, <em>didn&#x2019;t</em>, hardware engineers started looking for solutions. What they came up with was <em>CPU caching</em>.</p>
-<p>Modern chips have a <span name="caches">little chunk</span> of memory right inside the chip. It&#x2019;s small because it has to fit in the chip. The CPU can pull data from this much faster than it can main memory in part because it&#x2019;s physically closer to the registers. The electrons have a shorter distance to travel.</p>
+<p>Modern computers have a <span name="caches">little chunk</span> of memory right inside the chip. It&#x2019;s small because it has to fit in the chip. The CPU can pull data from this much faster than it can main memory in large part because it&#x2019;s physically closer to the registers. The electrons have a shorter distance to travel.</p>
 <aside name="caches">
 
 <p>Modern hardware actually has multiple levels of caching, which is what they mean when you hear "L1", "L2", "L3", etc. Each level is larger but slower than the previous. For this chapter, we won&#x2019;t worry about the fact that memory is actually a <a href="http://en.wikipedia.org/wiki/Memory_hierarchy">hierarchy</a>, but it&#x2019;s important to know.</p>
@@ -125,16 +125,16 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
 </aside>
 
 <p>If the next byte of data you need happens to be in that chunk, the CPU reads it straight from the cache, which is <em>much</em> faster than hitting RAM. Successfully finding a piece of data in the cache is called a <em>cache hit</em>. If it can&#x2019;t find it in there and has to go to main memory, that&#x2019;s a <em>cache miss</em>.</p>
-<p>When a cache miss occurs, the CPU <em>stalls</em>: it can&#x2019;t process the next instruction because needs data. It sits there, bored out of its mind for a few hundred cycles until the fetch completes. Our mission is to learn out how to avoid that. Imagine you&#x2019;re trying to optimize some performance critical piece of game code and it looks like this:</p>
+<p>When a cache miss occurs, the CPU <em>stalls</em>: it can&#x2019;t process the next instruction because needs data. It sits there, bored out of its mind for a few hundred cycles until the fetch completes. Our mission is to avoid that. Imagine you&#x2019;re trying to optimize some performance critical piece of game code and it looks like this:</p>
 <div class="codehilite"><pre><span class="k">for</span> <span class="p">(</span><span class="kt">int</span> <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span> <span class="n">i</span> <span class="o">&lt;</span> <span class="n">NUM_THINGS</span><span class="p">;</span> <span class="n">i</span><span class="o">++</span><span class="p">)</span>
 <span class="p">{</span>
-  <span class="n">doAbsolutelyNothingFor500Cycles</span><span class="p">();</span>
+  <span class="n">sleepFor500Cycles</span><span class="p">();</span>
   <span class="n">things</span><span class="p">[</span><span class="n">i</span><span class="p">].</span><span class="n">doStuff</span><span class="p">();</span>
 <span class="p">}</span>
 </pre></div>
 
 
-<p>What&#x2019;s the first change you&#x2019;re going to make to that code? Right. Take out that pointless, expensive function call. That functional call is equivalent to the performance cost of a cache miss. Every time you bounce to main memory, it&#x2019;s like you put a delay in your code.</p>
+<p>What&#x2019;s the first change you&#x2019;re going to make to that code? Right. Take out that pointless, expensive function call. That call is equivalent to the performance cost of a cache miss. Every time you bounce to main memory, it&#x2019;s like you put a delay in your code.</p>
 <h3><a href="#wait,-data-is-performance" name="wait,-data-is-performance">Wait, data is performance?</a></h3>
 <p>When I started working on this chapter, I spent some time putting together little game-like programs that would trigger best case and worst case cache usage. I wanted benchmarks that would thrash the cache so I could see first-hand how much bloodshed it causes.</p>
 <p>When I got some stuff working, I was surprised. I knew it was a big deal, but there&#x2019;s nothing quite like seeing it with your own eyes. <span name="ymmv">I wrote two programs</span> that did the <em>exact same</em> computation. The only difference was how many cache misses they caused. The slow one was fifty <em>times</em> slower than the other.</p>
@@ -144,11 +144,11 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
 <p>Your mileage will vary.</p>
 </aside>
 
-<p>This was a real eye-opener to me. I&#x2019;m used to thinking of performance being an aspect of <em>code</em> not <em>data</em>. A byte isn&#x2019;t slow or fast, it&#x2019;s just a static thing sitting there. But, because of caching, <em>the way you organize data directly impacts performance.</em></p>
+<p>This was a real eye-opener to me. I&#x2019;m used to thinking of performance being an aspect of <em>code</em> not <em>data</em>. A byte isn&#x2019;t slow or fast, it&#x2019;s just some static thing sitting there. But, because of caching, <em>the way you organize data directly impacts performance.</em></p>
 <p>The challenge now is to wrap that up into something that fits into a chapter here. Optimization for cache usage is a huge topic. I haven&#x2019;t even touched on <em>instruction caching</em>. Remember, code is in memory too and has to be loaded onto the CPU before it can be executed. Someone more versed on the subject could write an entire <span name="book">book</span> on it.</p>
 <aside name="book">
 
-<p>In fact, someone <em>is</em> writing a book on it: <a href="http://www.dataorienteddesign.com/dodmain/"><em>Data-Oriented Design</em></a> by Richard Fabian.</p>
+<p>In fact, someone <em>did</em> write a book on it: <a href="http://www.dataorienteddesign.com/dodmain/"><em>Data-Oriented Design</em></a> by Richard Fabian.</p>
 </aside>
 
 <p>Since you&#x2019;re already reading <em>this</em> book right now, though, I have a few basic techniques that will get you started along the path of thinking about how data structures impact your performance.</p>
@@ -165,7 +165,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
 </pre></div>
 
 
-<p>Note, these aren&#x2019;t <em>pointers</em> to A, B, and C. This is the actual data for them, in place, all lined up next to each other. As soon as the CPU reads in A, it will start to get B and C too (depending on how big they and how big a cache line is). When you start working on them next, they&#x2019;ll already be cached. Your chip is happy and you&#x2019;re happy.</p>
+<p>Note, these aren&#x2019;t <em>pointers</em> to A, B, and C. This is the actual data for them, in place, lined up next to each other. As soon as the CPU reads in A, it will start to get B and C too (depending on how big they are and how big a cache line is). When you start working on them next, they&#x2019;ll already be cached. Your chip is happy and you&#x2019;re happy.</p>
 <h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
 <p>Modern CPUs have <strong>caches to speed up memory access.</strong> These can access memory <strong>adjacent to recently accessed memory much quicker</strong>. Take advantage of that to improve performance by <strong>increasing data locality</strong>&thinsp;&mdash;&thinsp;keeping data in <strong>contiguous memory in the order that you process it.</strong></p>
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
