Intro for Optimization Patterns.

--- a/html/index.html
+++ b/html/index.html
@@ -95,7 +95,7 @@
           <li><a href="service-locator.html">Service Locator</a></li>
         </ul>
       </li>
-      <li>Optimizing Patterns
+      <li><a href="optimization-patterns.html">Optimization Patterns</a>
         <ul>
           <li><a href="data-locality.html">Data Locality</li>
           <li><a href="dirty-flag.html">Dirty Flag</a></li>
