--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Optimizing Patterns / Object Pool</title>
+<title>Game Programming Patterns / Optimization Patterns / Object Pool</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Optimizing Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="optimization-patterns.html">Optimization Patterns</a></h1>
 <h1>Object Pool</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
