--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -314,7 +314,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
 <p>Every frame, the game loop has to follow all of those arrows to get to the data it cares about.</p>
 </aside>
 
-<p>If our goal was to take a whirlwhind tour around the game&#x2019;s address space like some "256MB of RAM in Four Nights!" cheap vacation package, this would be a fantastic deal. But our goal is to run the game quickly, and <span name="chase">traipsing</span> all over main memory is <em>not</em> the way to do that. Remember that <code>sleepFor500Cycles()</code> function? Well this code is effectively calling that <em>all the time</em>.</p>
+<p>If our goal was to take a whirlwind tour around the game&#x2019;s address space like some "256MB of RAM in Four Nights!" cheap vacation package, this would be a fantastic deal. But our goal is to run the game quickly, and <span name="chase">traipsing</span> all over main memory is <em>not</em> the way to do that. Remember that <code>sleepFor500Cycles()</code> function? Well this code is effectively calling that <em>all the time</em>.</p>
 <aside name="chase">
 
 <p>The term for wasting a bunch of time traversing pointers is "pointer chasing", which it turns out is nowhere near as fun as it sounds.</p>
